# superoffice-sdk-python

./: main.py  pyproject.toml  setup.py  superoffice.pem
superoffice_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
superofficesdk/: PartnerSystemUserService.wsdl  SystemUserToken.py  myfunctions.py
superofficesdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_myfunctions.py
